# microservice-auth

./: .gitignore  README.md  SECURITY.md  cog.toml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: generate-release.yml
resources/: .gitignore  pyproject.toml  server.py
resources/storage/config/: logging.yml
